fix(css): make sure button text doesn't wrap

--- a/assets/css/components/button.css
+++ b/assets/css/components/button.css
@@ -4,7 +4,7 @@
     @apply border border-transparent rounded-md;
 
     @apply px-4 py-2;
-    @apply text-sm;
+    @apply text-sm whitespace-nowrap;
 
     @apply text-neutral-200 hover:text-neutral-100;
     @apply disabled:text-gray-400 dark:disabled:text-gray-800;
